--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <h1>This is a header</h1>
         <p>paragraph</p>
          <p>second paragraph</p>
+        <p>third paragraph</p>
     </body>
 </html>
